# OD_SaaS

./: .gitignore  README.md  TEST_REPORT.md  app.py  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
modules/: __init__.py  auth.py  data_storage.py  models.py  routes.py  video_processor.py
rules/: refresh.md  request.md  retro.md
static/: style.css
static/js/: annotation-workspace.js  dashboard.js  export-interface.js  upload-wizard.js
templates/: annotate.html  base.html  error.html  export.html  index.html  upload.html
templates/auth/: login.html  profile.html  register.html
tests/: conftest.py  test_auth.py  test_data_storage.py  test_integration.py  test_models.py  test_routes.py  test_video_processor.py
