[tool.poetry]
name = "video-labeling-tool"
version = "1.0.0"
description = "A Flask application for creating labeled datasets from videos"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "modules"}]

[tool.poetry.dependencies]
python = "^3.8.1"
flask = "^2.3.3"
werkzeug = "^2.3.7"
jinja2 = "^3.1.2"
markupsafe = "^2.1.3"
itsdangerous = "^2.1.2"
click = "^8.1.7"
blinker = "^1.6.3"
opencv-python = "^4.8.0"
pillow = "^10.0.0"
flask-login = "0.6.3"
flask-wtf = "1.1.1"
wtforms = "3.0.1"
bcrypt = "4.0.1"
email-validator = "^2.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.7.0"
pytest-flask = "^1.3.0"
pytest-mock = "^3.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "main:main" 